--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-cli": "^2.2.0",
+    "gulp-closure-compiler": "^0.4.0",
     "gulp-file-include": "^2.1.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-notify": "^3.2.0",
